--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ h1 {
 nav {
     height: 36px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between and all-over;
     align-items: center;
 }
 
